# QScreensaver

./: CMakeLists.txt  README.md  config.json  copyright.txt  qtscreensaver.xml
src/: QAnimatedButton.cpp  QAnimatedButton.h  QAnimatedClip.cpp  QAnimatedClip.h  QImageButton.cpp  QImageButton.h  ScreenSaverWidget.h  StatusManager.h  debug_ex.h  file_system.cpp  file_system.h  imagenes.qrc  main.cpp  string_ex.h  tinyxml2.cpp  tinyxml2.h
src/parameters/: args.cpp  args.h  argsBase.cpp  argsBase.h  argsBaseJSON.cpp  argsBaseJSON.h
